--- a/src/howitz/templates/includes/configs.html
+++ b/src/howitz/templates/includes/configs.html
@@ -1,3 +1,3 @@
 <!-- HTMX Config -->
-<meta name="htmx-config" content='{"defaultFocusScroll":"true"}'>
+<meta name="htmx-config" content='{"defaultFocusScroll":"true", "useTemplateFragments":"true"}'>
 
