--- a/src/howitz/templates/layouts/base.html
+++ b/src/howitz/templates/layouts/base.html
@@ -15,6 +15,8 @@
 
     {% include "includes/scripts.html" %}
 
+    {% include "includes/style.html" %}
+
 </head>
 <body
         hx-ext="[{% block extensions %}{% endblock %}]"
