--- a/src/howitz/templates/ui/components/events-table.html
+++ b/src/howitz/templates/ui/components/events-table.html
@@ -16,6 +16,9 @@
         <th scope="col" class="border border-slate-600 px-6 py-3">PORT</th>
         <th scope="col" class="border border-slate-600 px-6 py-3">DESCRIPTION</th>
         <th scope="col" class="border border-slate-600 px-6 py-3"></th>
+        <th scope="col" class="border border-slate-600 px-6 py-3"></th>
+        <th scope="col" class="border border-slate-600 px-6 py-3"></th>
+        <th scope="col" class="border border-slate-600 px-6 py-3"></th>
     </tr>
     </thead>
     <tbody
