--- a/src/howitz/templates/ui/elements/event-details-modal.html
+++ b/src/howitz/templates/ui/elements/event-details-modal.html
@@ -13,7 +13,7 @@
 
     <div class="flex items-end justify-center p-4 text-center sm:items-center sm:p-0">
 
-        <div class="relative transform overflow-auto rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 w-fit h-fit sm:w-full sm:max-w-fit">
+        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 w-fit sm:w-full sm:max-w-fit">
             <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
                 <div class="sm:flex sm:items-start">
                     <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
@@ -24,7 +24,7 @@
                             <div
                                     id="accordion-collapse-body-{{ id }}"
                                     aria-labelledby="accordion-collapse-row-{{ id }}"
-                                    class="max-w-5xl max-h-96 p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+                                    class="max-w-5xl p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
                                 <div
                                         class="grid grid-cols-1 content-between gap-4 divide-y-4 divide-slate-500"
