--- a/src/howitz/templates/components/table/events-table.html
+++ b/src/howitz/templates/components/table/events-table.html
@@ -3,7 +3,7 @@
         hx-get="/get_events"
         hx-swap="innerHTML"
         hx-target="#eventlist-list"
-        hx-trigger="load"
+        hx-trigger="every 5s"
 >
     <thead class="text-xs text-center text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-300">
     <tr>
