--- a/src/howitz/templates/components/accordion/update-state-btn.html
+++ b/src/howitz/templates/components/accordion/update-state-btn.html
@@ -1,8 +1,8 @@
 <button
         id="update-event-{{ id }}"
         hx-get="/event/{{ id }}/update_status"
-        hx-target="#hidden-li-{{ id }}"
-        hx-swap="outerHTML show:bottom"
+        hx-target="#event-messages-update-component-{{ id }}"
+        hx-swap="innerHTML show:#event-update-form-{{ id }}:bottom"
         hx-swap-oob="{{ oob_swap if oob_swap is not none else 'false'}}"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-3.5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
 >
