--- a/src/howitz/templates/forms/update_state/update-state-form.html
+++ b/src/howitz/templates/forms/update_state/update-state-form.html
@@ -1,61 +1,75 @@
-<li
-        id="update-event-form-{{ id }}"
-        class="mb-6 ml-4">
-    <div class="absolute w-3 h-3 bg-white rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900"></div>
-
-    <div
-
+<div id="event-update-form-{{ id }}" class="flow-root">
+    <ul
+            id="ol-event-update-{{ id }}"
+            class="relative border-l border-gray-200 dark:border-gray-700"
     >
-        <div class="flex justify-between items-center mb-6">
-            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Update event (#{{ id }})</h3>
-        </div>
-        <form class="mb-6 space-y-5">
 
-            <div class="text-base w-1/6">
-                <label
-                        for="event-state" class="block mb-2 font-medium text-gray-900 dark:text-white">
-                    Select state
-                </label>
-                <select id="event-state"
-                        name="event-state"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option class="px-2" value="open" {% if current_state=='open' %}selected{% endif %}>Open</option>
-                    <option class="mx-2" value="working" {% if current_state=='working' %}selected{% endif %}>Working
-                    </option>
-                    <option value="waiting" {% if current_state=='waiting' %}selected{% endif %}>Waiting</option>
-                    <option value="confirm-wait" {% if current_state=='confirm-wait' %}selected{% endif %}>Confirm
-                    </option>
-                    <option value="ignored" {% if current_state=='ignored' %}selected{% endif %}>Ignored</option>
-                    <option value="closed" {% if current_state=='closed' %}selected{% endif %}>Closed</option>
-                </select>
+        <li
+                id="update-event-form-{{ id }}"
+                class="mb-6 ml-4">
+            <div class="absolute w-3 h-3 bg-white rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900"></div>
+
+            <div
+
+            >
+                <div class="flex justify-between items-center mb-6">
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Update event (#{{ id }})</h3>
+                </div>
+                <form class="mb-6 space-y-5">
+
+                    <div class="text-base w-1/6">
+                        <label
+                                for="event-state" class="block mb-2 font-medium text-gray-900 dark:text-white">
+                            Select state
+                        </label>
+                        <select id="event-state"
+                                name="event-state"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <option class="px-2" value="open" {% if current_state=='open' %}selected{% endif %}>Open
+                            </option>
+                            <option class="mx-2" value="working" {% if current_state=='working' %}selected{% endif %}>
+                                Working
+                            </option>
+                            <option value="waiting" {% if current_state=='waiting' %}selected{% endif %}>Waiting
+                            </option>
+                            <option value="confirm-wait" {% if current_state=='confirm-wait' %}selected{% endif %}>
+                                Confirm
+                            </option>
+                            <option value="ignored" {% if current_state=='ignored' %}selected{% endif %}>Ignored
+                            </option>
+                            <option value="closed" {% if current_state=='closed' %}selected{% endif %}>Closed</option>
+                        </select>
+                    </div>
+
+                    <div class="w-3/4 py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700">
+                        <label for="comment" class="sr-only">Your comment</label>
+                        <textarea id="comment" rows="4"
+                                  name="event-history"
+                                  class="px-0 w-full text-base text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
+                                  placeholder="Add a message to history..."></textarea>
+                    </div>
+
+                    <button
+                            type="button"
+                            hx-post="/event/{{ id }}/update_status"
+                            hx-swap="multi:#event-accordion-row-{{ id }}:outerHTML,#event-details-row-{{ id }}:outerHTML,#event-update-form-{{ id }}:outerHTML show:#ol-event-{{ id }}:bottom"
+                            class="mr-1 inline-flex items-center py-2.5 px-4 font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800 bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Update event
+                    </button>
+
+                    <button
+                            type="button"
+                            hx-trigger="click"
+                            hx-get="/event/{{ id }}/update_status/cancel"
+                            hx-swap="outerHTML"
+                            hx-target="#event-update-form-{{ id }}"
+                            class="ml-1 inline-flex items-center py-2.5 px-4 font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800 bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Cancel
+                    </button>
+                </form>
+
             </div>
+        </li>
 
-            <div class="w-3/4 py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700">
-                <label for="comment" class="sr-only">Your comment</label>
-                <textarea id="comment" rows="4"
-                          name="event-history"
-                          class="px-0 w-full text-base text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
-                          placeholder="Add a message to history..."></textarea>
-            </div>
-
-            <button
-                    type="submit"
-                    hx-post="/event/{{ id }}/update_status"
-                    hx-swap="multi:#event-details-row-{{ id }}:outerHTML,#event-accordion-row-{{ id }}:outerHTML show:#ol-event-{{ id }}:bottom"
-                    class="mr-1 inline-flex items-center py-2.5 px-4 font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800 bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                Update event
-            </button>
-
-            <button
-                    type="button"
-                    hx-trigger="click"
-                    hx-get="/event/{{ id }}/update_status/cancel"
-                    hx-swap="outerHTML"
-                    hx-target="#update-event-form-{{ id }}"
-                    class="ml-1 inline-flex items-center py-2.5 px-4 font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800 bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                Cancel
-            </button>
-        </form>
-
-    </div>
-</li>
+    </ul>
+</div>
