--- a/src/howitz/templates/responses/get-update-event-status-form.html
+++ b/src/howitz/templates/responses/get-update-event-status-form.html
@@ -3,7 +3,7 @@
 <button
         id="update-event-{{ id }}"
         hx-get="/get_none"
-        hx-swap="none show:#ol-event-{{ id }}:bottom"
+        hx-swap="none show:#event-update-form-{{ id }}:bottom"
         hx-swap-oob="outerHTML"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
 >
